started machine and routing table

--- a/DSProject/DSProject.vcxproj
+++ b/DSProject/DSProject.vcxproj
@@ -136,9 +136,9 @@
     <ClInclude Include="BTree.h" />
     <ClInclude Include="circularLinkedlist.h" />
     <ClInclude Include="doublyLL.h" />
-    <ClInclude Include="finger Table.h" />
     <ClInclude Include="generating_SHA.h" />
     <ClInclude Include="machine.h" />
+    <ClInclude Include="routing_table.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
